--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="/src/scss/reset.css">
-    <link rel="stylesheet" href="/src/scss/style.css">
-    <link rel="stylesheet" href="/src/scss/responsive.css">
+    <link rel="stylesheet" href="./src/scss/reset.css">
+    <link rel="stylesheet" href="./src/scss/style.css">
+    <link rel="stylesheet" href="./src/scss/responsive.css">
 
 
     <title>Fylo</title>
