--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                     <span id="notification1"></span>
                                 </div>
                                 <div>
-                                    <button id="button1">Get Started</button>
+                                    <button type="submit" id="button1">Get Started</button>
                                 </div>
                             </form>
                         </div>
@@ -119,7 +119,7 @@
                     <form action="">
                         <input type="email" placeholder="email@example.com" id="input2">
                         <span id="notification2"></span>
-                        <button id="button2">Get Started</button>
+                        <button type="submit" id="button2">Get Started</button>
                     </form>
                 </div>
             </div>
@@ -148,13 +148,13 @@
                     <p>Privacy</p>
                 </div>
                 <div class="social-medias">
-                    <a href="http://www.instagram.com" target="_blank">
+                    <a href="http://www.instagram.com" target="_blank" title="instagram">
                         <i class="fa-brands fa-instagram fa-2x"></i>
                     </a>
-                    <a href="http://www.facebook.com" target="_blank">
+                    <a href="http://www.facebook.com" target="_blank" title="facebook">
                         <i class="fa-brands fa-facebook fa-2x"></i>
                     </a>
-                    <a href="http://www.x.com" target="_blank">
+                    <a href="http://www.x.com" target="_blank" title="x">
                         <i class="fa-brands fa-twitter fa-2x"></i>
                     </a>
                 </div>
