add responsive design

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="./src/scss/style.css">
     <link rel="stylesheet" href="./src/scss/responsive.css">
 
-
     <title>Fylo</title>
 
     <link rel="icon" href="./src/images/Header-image.png" type="image/x-icon">
@@ -31,7 +30,7 @@
         <div class="main">
             <header>
                 <div class="logo">
-                    <img src="./src/images/Header-image.png" alt="logo">
+                    <img src="./src/images/Header-image.png" alt="logo" width="55">
                     <p>Fylo</p>
                 </div>
                 <div class="navegation">
@@ -41,7 +40,7 @@
                 </div>
             </header>
 
-            <section class="padding">
+            <section class="container">
                 <div class="hero">
                     <div class="hero-text">
                         <h1>All your files in one secure location, accessible anywhere.</h1>
@@ -64,21 +63,19 @@
                     </div>
                     <div class="hero-image">
                         <figure>
-                            <img src="./src/images/Hero-image.jpg" alt="hero-image">
+                            <img src="./src/images/Hero-image.jpg" alt="hero-image" width="640">
                         </figure>
                     </div>
                 </div>
             </section>
         </div>
-        <section class="padding2">
+        <section class="container2">
             <div class="productive">
                 <div class="productive-text">
                     <h2>Stay productive, wherever you are</h2>
-                    <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your
-                        file storage needs.</p>
-
-                    <p>Securely share files and folders with friends, family and colleagues for live collaboration. No
-                        email attachments required!</p>
+                    <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.
+                    </p>
+                    <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
                     <div class="explain">
                         <p id="explain">See how Fylo works</p>
                         <img src="./src/images/right-arrow.png" alt="arrow" width="16">
@@ -103,7 +100,7 @@
                 </div>
                 <div class="productive-image">
                     <figure>
-                        <img src="./src/images/Productive-image.png" alt="productive-image">
+                        <img src="./src/images/Productive-image.png" alt="productive-image" width="540">
                     </figure>
                 </div>
             </div>
